# lms_drf

./: .env.sample  .gitignore  Dockerfile  README.md  coverage.txt  docker-compose.yaml  pyproject.toml  requirements.txt
config/: celery.py  settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/fixtures/: materials.json
materials/migrations/: 0001_initial.py  0002_course_author_lesson_author.py  0003_remove_course_author_remove_lesson_author_and_more.py  0004_subscription.py  0005_alter_course_options.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/fixtures/: groups.json  payments.json  users.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_payment_link_payment_session_id.py  0004_payment_payment_status.py
